--- a/Otbbor/Views/Base.lproj/Main.storyboard
+++ b/Otbbor/Views/Base.lproj/Main.storyboard
@@ -308,7 +308,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Zn-Fm-Cyr">
-                                        <rect key="frame" x="330" y="40" width="30" height="33"/>
+                                        <rect key="frame" x="330" y="41.5" width="30" height="30"/>
                                         <fontDescription key="fontDescription" name="Alegreya-Regular" family="Alegreya" pointSize="15"/>
                                         <state key="normal" title="exit">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -502,6 +502,11 @@
                                             <constraint firstAttribute="height" constant="35" id="7Va-u0-TKJ"/>
                                             <constraint firstAttribute="width" constant="35" id="CBC-c5-3AR"/>
                                         </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="18"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </imageView>
                                 </subviews>
                             </stackView>
@@ -519,7 +524,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Каким ты себя ощущаешь сегодня?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zxu-2e-LRk">
-                                        <rect key="frame" x="20.5" y="43" width="333" height="30"/>
+                                        <rect key="frame" x="1.5" y="43" width="371.5" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="JPi-7j-mHY"/>
                                         </constraints>
@@ -605,19 +610,18 @@
                                     <outlet property="delegate" destination="3fj-wd-RZ2" id="e1S-kZ-MQ4"/>
                                 </connections>
                             </collectionView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cux-ps-ur3">
-                                <rect key="frame" x="20" y="384" width="374" height="429"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cux-ps-ur3">
+                                <rect key="frame" x="20" y="335" width="374" height="478"/>
                                 <color key="backgroundColor" red="0.13105762000000001" green="0.19989529249999999" blue="0.20392403009999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Q4s-rz-5W0">
                                     <size key="itemSize" width="354" height="197"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="QuotesCollectionViewCell" id="Yf2-yT-BM9" customClass="QuotesCollectionViewCell" customModule="Otbbor" customModuleProvider="target">
-                                        <rect key="frame" x="17.5" y="0.0" width="339" height="170"/>
+                                        <rect key="frame" x="17.5" y="10" width="339" height="170"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1JT-a7-B3t">
                                             <rect key="frame" x="0.0" y="0.0" width="339" height="170"/>
@@ -633,10 +637,10 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="339" height="170"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Заголовок блока" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Vg-Yk-gKA">
-                                                            <rect key="frame" x="8" y="27" width="186" height="34"/>
+                                                            <rect key="frame" x="8" y="27" width="197" height="34"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="186" id="EPV-nX-ctb"/>
-                                                                <constraint firstAttribute="height" constant="34" id="YNS-j4-dIR"/>
+                                                                <constraint firstAttribute="height" constant="34" id="rm2-sg-0tq"/>
+                                                                <constraint firstAttribute="width" constant="197" id="wUf-aC-Kbp"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="Alegreya-Regular" family="Alegreya" pointSize="24"/>
                                                             <nil key="textColor"/>
@@ -645,8 +649,8 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Заголовок блока" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T4d-FT-tcL">
                                                             <rect key="frame" x="18" y="63" width="176" height="36"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="176" id="NNg-fN-MGM"/>
-                                                                <constraint firstAttribute="height" constant="36" id="qEc-tm-OFT"/>
+                                                                <constraint firstAttribute="width" constant="176" id="EWU-RP-gqD"/>
+                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="pI8-Kc-uSg"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="Alegreya-Regular" family="Alegreya" pointSize="15"/>
                                                             <nil key="textColor"/>
@@ -656,8 +660,8 @@
                                                             <rect key="frame" x="19" y="109" width="140" height="38"/>
                                                             <color key="backgroundColor" red="0.1033433154" green="0.160684824" blue="0.1647080481" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="140" id="lr8-o7-7zd"/>
-                                                                <constraint firstAttribute="height" constant="38" id="vBU-yN-B5a"/>
+                                                                <constraint firstAttribute="width" constant="140" id="K9P-3b-nzG"/>
+                                                                <constraint firstAttribute="height" constant="38" id="bnL-qF-dY6"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="Alegreya-Regular" family="Alegreya" pointSize="15"/>
                                                             <state key="normal" title="подбробнее">
@@ -672,14 +676,12 @@
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
-                                                        <constraint firstItem="T4d-FT-tcL" firstAttribute="leading" secondItem="JZG-S3-GeW" secondAttribute="leading" constant="18" id="60p-c3-dxt"/>
-                                                        <constraint firstAttribute="bottom" secondItem="Cbi-OJ-3NU" secondAttribute="bottom" constant="23" id="Am8-fv-1iy"/>
-                                                        <constraint firstItem="Cbi-OJ-3NU" firstAttribute="top" secondItem="T4d-FT-tcL" secondAttribute="bottom" constant="10" id="H0u-be-pKZ"/>
-                                                        <constraint firstItem="2Vg-Yk-gKA" firstAttribute="top" secondItem="JZG-S3-GeW" secondAttribute="top" constant="27" id="S2g-V5-lJB"/>
-                                                        <constraint firstItem="2Vg-Yk-gKA" firstAttribute="leading" secondItem="JZG-S3-GeW" secondAttribute="leading" constant="8" id="Utm-Kg-Uy5"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Cbi-OJ-3NU" secondAttribute="trailing" constant="180" id="fVV-W2-qeg"/>
-                                                        <constraint firstItem="Cbi-OJ-3NU" firstAttribute="leading" secondItem="JZG-S3-GeW" secondAttribute="leading" constant="19" id="pV8-Wv-n4t"/>
-                                                        <constraint firstItem="T4d-FT-tcL" firstAttribute="top" secondItem="2Vg-Yk-gKA" secondAttribute="bottom" constant="2" id="yYq-iL-qSW"/>
+                                                        <constraint firstItem="2Vg-Yk-gKA" firstAttribute="top" secondItem="JZG-S3-GeW" secondAttribute="top" constant="27" id="3xH-hZ-sLX"/>
+                                                        <constraint firstItem="T4d-FT-tcL" firstAttribute="leading" secondItem="JZG-S3-GeW" secondAttribute="leading" constant="18" id="RFF-WE-ugA"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Cbi-OJ-3NU" secondAttribute="bottom" constant="23" id="W5T-ci-qgx"/>
+                                                        <constraint firstItem="Cbi-OJ-3NU" firstAttribute="leading" secondItem="JZG-S3-GeW" secondAttribute="leading" constant="19" id="Yhg-y6-2qR"/>
+                                                        <constraint firstItem="T4d-FT-tcL" firstAttribute="top" secondItem="2Vg-Yk-gKA" secondAttribute="bottom" constant="2" id="dzg-SE-f2k"/>
+                                                        <constraint firstItem="2Vg-Yk-gKA" firstAttribute="leading" secondItem="JZG-S3-GeW" secondAttribute="leading" constant="8" id="i5x-a6-2ax"/>
                                                     </constraints>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -722,13 +724,17 @@
                         <constraints>
                             <constraint firstItem="9W5-5N-tc0" firstAttribute="top" secondItem="0kG-Xx-Lqp" secondAttribute="bottom" constant="24" id="188-fx-5fJ"/>
                             <constraint firstItem="0kG-Xx-Lqp" firstAttribute="leading" secondItem="cqP-uB-n0P" secondAttribute="leading" constant="26" id="2k6-io-UqS"/>
+                            <constraint firstItem="cux-ps-ur3" firstAttribute="bottom" secondItem="cqP-uB-n0P" secondAttribute="bottom" id="2o9-f4-L6F"/>
                             <constraint firstItem="cqP-uB-n0P" firstAttribute="trailing" secondItem="0kG-Xx-Lqp" secondAttribute="trailing" constant="14" id="3cL-5W-gBz"/>
                             <constraint firstItem="9W5-5N-tc0" firstAttribute="leading" secondItem="cqP-uB-n0P" secondAttribute="leading" id="JSE-IN-Qm8"/>
+                            <constraint firstItem="cux-ps-ur3" firstAttribute="leading" secondItem="cqP-uB-n0P" secondAttribute="leading" constant="20" id="JT2-ZV-CUt"/>
+                            <constraint firstItem="cqP-uB-n0P" firstAttribute="trailing" secondItem="cux-ps-ur3" secondAttribute="trailing" constant="20" id="L4a-jI-G89"/>
                             <constraint firstItem="9W5-5N-tc0" firstAttribute="trailing" secondItem="cqP-uB-n0P" secondAttribute="trailing" id="TWu-nr-Abs"/>
                             <constraint firstItem="MpB-us-rcG" firstAttribute="leading" secondItem="cqP-uB-n0P" secondAttribute="leading" constant="31" id="fAI-hA-iMR"/>
                             <constraint firstItem="0kG-Xx-Lqp" firstAttribute="top" secondItem="MpB-us-rcG" secondAttribute="bottom" constant="2" id="fTS-ix-hgK"/>
                             <constraint firstItem="cqP-uB-n0P" firstAttribute="trailing" secondItem="MpB-us-rcG" secondAttribute="trailing" constant="18" id="fW1-5P-jNE"/>
                             <constraint firstItem="MpB-us-rcG" firstAttribute="top" secondItem="ock-d3-2kc" secondAttribute="top" constant="17" id="feg-fW-XMx"/>
+                            <constraint firstItem="cux-ps-ur3" firstAttribute="top" secondItem="9W5-5N-tc0" secondAttribute="bottom" constant="8" symbolic="YES" id="i7b-pf-nai"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="Vector (2)" id="MS6-Q5-Ydf">
@@ -737,6 +743,8 @@
                     <navigationItem key="navigationItem" id="OnC-hd-7yT"/>
                     <connections>
                         <outlet property="collectionview1" destination="9W5-5N-tc0" id="A5g-JL-L4Z"/>
+                        <outlet property="userImage" destination="ofF-bB-ZT7" id="leT-ks-Hib"/>
+                        <outlet property="userTitle" destination="gYF-9n-eJ0" id="DRI-Do-QEc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oJU-sS-OYS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -990,7 +998,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="ejj-F4-HMd"/>
         <segue reference="q4H-NU-BQt"/>
-        <segue reference="Rie-2D-IEV"/>
+        <segue reference="P6Q-Vk-gOq"/>
         <segue reference="ggR-vr-53l"/>
     </inferredMetricsTieBreakers>
     <resources>
